# pre-commit-check-conflict-origin

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  check_conflict_origin.py  setup.cfg
