[metadata]
name = check_git_branch_conflict
version = 0.1.0
description = check-git-branch-conflict hook for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PradhiptaBagaskara/pre-commit-check-conflict-origin
author = Pradhipta Bagaskara
author_email = pradhiptabagaskara@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    typing
python_requires = >=3.6.1

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    check-git-branch-conflict = check_conflict_origin:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[flake8]
# it's not a bug that we aren't using all of hacking, ignore:
# F812: list comprehension redefines ...
# H101: Use TODO(NAME)
# H202: assertRaises Exception too broad
# H233: Python 3.x incompatible use of print operator
# H301: one import per line
# H306: imports not in alphabetical order (time, os)
# H401: docstring should not start with a space
# H403: multi line docstrings should end on a new line
# H404: multi line docstring should start without a leading new line
# H405: multi line docstring summary not separated with an empty line
# H501: Do not use self.__dict__ for string formatting
ignore=F812,H101,H202,H233,H301,H306,H401,H403,H404,H405,H501,E203,E266,E501,W503,F403,F401,F405,E231,F841,C901,F821,E722,E714,E713,E711,W291,E402,W605,F632
max-line-length=100
ban-relative-imports = true
select=B,C,E,F,W,T4,B9,I25
filename = *.py
exclude =
    .git,
    __pycache__,
    */tests/*,
    docs/source/conf.py,
    old,
    build,
    */migrations/*,
    dist,
    */__init__.py
max-complexity = 18
